--- a/package.json
+++ b/package.json
@@ -2,8 +2,18 @@
   "name": "gs_admin",
   "version": "0.0.0",
   "private": true,
+  "main": "./bin/www",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "D:/program_files/nodejs/node  ./bin/www"
+  },
+  "browserify": {
+    "transform": [
+      "reactify",
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "react": "global:React"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -12,6 +22,16 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "reactify": "~1.1.1",
+    "react": "~0.14.7"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-browserify": "~4.0.1",
+    "babelify": "~7.2.0",
+    "babel-preset-es2015": "~6.6.0",
+    "babel-preset-react": "~6.5.0"
   }
 }
