--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     ]
   },
   "browserify-shim": {
-    "react": "global:React"
+    "react": "global:React",
+    "reflux": "global:Reflux",
+    "react-dom": "global:ReactDOM",
+    "react-router": "global:ReactRouter",
+	"react-bootstrap": "global:ReactBootstrap"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -24,7 +28,10 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "reactify": "~1.1.1",
-    "react": "~0.14.7"
+    "react": "~0.14.7",
+    "reflux": "~0.3.0",
+    "react-router": "~2.0.1",
+    "react-dom": "~0.14.7"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
