--- a/package.json
+++ b/package.json
@@ -1,44 +1,31 @@
 {
-  "name": "gs_admin",
+  "name": "notify-test",
   "version": "0.0.0",
-  "private": true,
-  "main": "./bin/www",
+  "description": "",
+  "main": "src/server/server.js",
   "scripts": {
-    "start": "D:/program_files/nodejs/node  ./bin/www"
+    "start": "node src/server/server.js",
+    "postinstall": "webpack --config config/webpack.js",
+    "webpack": "webpack --config config/webpack.js --progress"
   },
-  "browserify": {
-    "transform": [
-      "reactify",
-      "browserify-shim"
-    ]
-  },
-  "browserify-shim": {
-    "react": "global:React",
-    "reflux": "global:Reflux",
-    "react-dom": "global:ReactDOM",
-    "react-router": "global:ReactRouter",
-	"react-bootstrap": "global:ReactBootstrap"
-  },
+  "author": "JuLiAn",
+  "license": "BSD-2-Clause",
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "reactify": "~1.1.1",
-    "react": "~0.14.7",
-    "reflux": "~0.3.0",
-    "react-router": "~2.0.1",
-    "react-dom": "~0.14.7"
+    "express": "~4.13.4",
+    "react-dom": "~15.1.0",
+    "react-router": "~2.4.1",
+    "react": "~15.1.0",
+    "morgan": "~1.7.0",
+    "react-bootstrap": "~0.29.4",
+    "reflux": "~0.4.1"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-copy": "~1.0.0",
-    "grunt-browserify": "~4.0.1",
-    "babelify": "~7.2.0",
-    "babel-preset-es2015": "~6.6.0",
+    "babel": "~6.5.2",
+    "webpack": "~1.13.1",
+    "babel-core": "~6.9.1",
+    "babel-loader": "~6.2.4",
+    "jsx-loader": "~0.13.2",
+    "babel-preset-es2015": "~6.9.0",
     "babel-preset-react": "~6.5.0"
   }
 }
