--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notify-test",
+  "name": "gs_admin",
   "version": "0.0.0",
   "description": "",
   "main": "src/server/server.js",
@@ -17,7 +17,8 @@
     "react": "~15.1.0",
     "morgan": "~1.7.0",
     "react-bootstrap": "~0.29.4",
-    "reflux": "~0.4.1"
+    "reflux": "~0.4.1",
+    "react-notification-system": "~0.2.7"
   },
   "devDependencies": {
     "babel": "~6.5.2",
